BE/error/src/main/java/com/example/demo/schedule/application/dto/UpdateScheduleRequest.java
package com.example.demo.schedule.application.dto;


import com.example.demo.schedule.persistence.ScheduleType;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;

import java.time.LocalDateTime;

@Getter
@AllArgsConstructor
@NoArgsConstructor
@Builder(toBuilder = true)
public class UpdateScheduleRequest {
    private Long eventId;
    private String eventName;
    private LocalDateTime eventStartDate;
    private LocalDateTime eventEndDate;
    private String eventInfo;
    private String eventPlace;
    private ScheduleType eventType;
}

